<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:padding="8dp"
    android:layout_marginTop="32dp">

    <TextView
        android:id="@+id/text_view_previous_order_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/text_view_previous_orders_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/text_view_previous_order_details_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toStartOf="@id/text_view_previous_order_details_name"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_view_previous_orders_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/text_view_previous_order_details_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_previous_order_details_name"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_view_previous_orders_description" />

    <Button
        android:id="@+id/button_item_details_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_margin="16dp"
        android:text="@string/button_confirm"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>